# fiesta

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/input/: mod.rs  options.rs  prompt.rs
src/setup/: htmx.rs  mod.rs  rust.rs  tailwind.rs
